--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -1,13 +1,27 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>What's the weather like?</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.6.2/css/bulma.css" />
+
   </head>
   <body>
     <h1>This is base</h1>
-    {% if user.is_authenticated %}
-      {{user}}
-    {% endif %}
+
+    <section class="hero is-primary">
+        <div class="hero-body">
+            <div class="container">
+                <h1 class="title">
+                  {% if user.is_authenticated %}
+                    WELCOME {{user}}
+                  {% endif %}
+                </h1>
+            </div>
+        </div>
+    </section>
+    {% block content %}
+    {% endblock %}
   </body>
 </html>
