--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,11 +1,5 @@
-<<!DOCTYPE html>
-<html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <title></title>
-  </head>
-  <body>
-    <h1>Hello</h1>
+{% extends 'base.html' %}
+{% block content %}
     <form method="POST" enctype="multipart/form-data">
 
     <!-- Security token -->
@@ -16,5 +10,4 @@
 
     <input type="submit" value="Submit">
 </form>
-  </body>
-</html>
+{% endblock %}
