--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -1,13 +1,6 @@
-{% load static %}
-<!DOCTYPE html>
-<html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <title>What's the weather like?</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.6.2/css/bulma.css" />
+{% extends 'welcome.html' %}
+{% block content %}
 
-  </head>
-  <body>
 
     <section class="hero is-primary">
         <div class="hero-body">
@@ -20,7 +13,7 @@
             </div>
         </div>
     </section>
-    {% block content %}
+    
     {% endblock %}
   </body>
 </html>
