Added search feature

--- a/app/templates/welcome.html
+++ b/app/templates/welcome.html
@@ -30,7 +30,7 @@
         {% if user.is_authenticated %}
 
         <li><a class="button-black button-outline button-clear" href="{% url 'user:logout' %}">Logout</a></li>
-          <li><a class="button-black button-outline button-clear" href="#">Search for a City</a></li>
+          <li><a class="button-black button-outline button-clear" href="{% url 'weather:search' %}">Search for a City</a></li>
         {% else %}
           <li class="list-item"><a class="button-black button-outline button-clear" href="{% url 'user:login' %}"><span>Login<span></a></li>
             <li class="list-register"><a class="button-black button-outline button-clear" href="{% url 'user:create'%}">Register</a></li>
